src/dts/tests/classes/classes.exp
Error: classes.js:2
  2: var a : C = new D();
             ^ C. This type is incompatible with
  3: var a : D = new C();  // Error: C ~> D
             ^ D


Found 1 error
